# debug_battlefield

./: .gitignore  LICENSE  README.md  REPORT.md
broken-app/: Cargo.toml
broken-app/artifacts/: baseline_after.txt  baseline_before.txt  cargo_test_initial.txt  criterion_broken.txt  gdb_notes.txt  perf_summary.txt  profiling_notes.txt
broken-app/benches/: baseline.rs  criterion.rs
broken-app/scripts/: asan.sh  bench_criterion.sh  profile.sh  tsan.sh  valgrind.sh
broken-app/src/: algo.rs  concurrency.rs  lib.rs
broken-app/tests/: integration.rs
reference-app/: Cargo.toml
reference-app/artifacts/: baseline_reference.txt  criterion_reference.txt
