[package]
name = "reference-app"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.5", optional = true }

[features]
criterion-bench = ["dep:criterion"]

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "criterion"
harness = false
required-features = ["criterion-bench"]
